--- a/WeBeyn/res/layout/activity_main.xml
+++ b/WeBeyn/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    android:background="@drawable/item_list_background"
+    android:dividerHeight="-5dp"
+    android:padding="@dimen/activity_padding" >
 
-</RelativeLayout>
+</ListView>
