--- a/WeBeyn/res/layout/layout_item.xml
+++ b/WeBeyn/res/layout/layout_item.xml
@@ -36,10 +36,11 @@
             android:text="@string/item_separator"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <TextView
-            android:id="@+id/textView_item_numberOfComments"
+        <Button
+            android:id="@+id/button_item_numberOfComments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
 
