--- a/WeBeyn/res/layout/layout_item.xml
+++ b/WeBeyn/res/layout/layout_item.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/item_background_drop_shadow"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:descendantFocusability="blocksDescendants" >
 
     <TextView
         android:id="@+id/textView_item_title"
@@ -43,6 +44,14 @@
             android:background="#00FFFFFF"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </LinearLayout>
+    
+    <ImageView
+        android:id="@+id/imageView_item_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/item_margin"
+        android:layout_marginTop="@dimen/item_margin"
+        android:scaleType="fitCenter" />
 
     <TextView
         android:id="@+id/textView_item_summary"
