* WeBeyn 1.0 seems to be ready! * About dialog is ready. * User is notified when there is no network connection. * Splash screen is shown at most for 3 seconds.

--- a/WeBeyn/res/layout/activity_main.xml
+++ b/WeBeyn/res/layout/activity_main.xml
@@ -15,4 +15,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/no_connection" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/network_error"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
 </LinearLayout>
