* Added an option to copy the link of current page to the clipboard. * Fixed JavaScript setting, categories and search on the web site now works.

--- a/WeBeyn/res/menu/menu.xml
+++ b/WeBeyn/res/menu/menu.xml
@@ -1,5 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:webeyn="http://schemas.android.com/apk/res-auto" >
 
+    <item
+        android:id="@+id/item_copyLink"
+        android:icon="@drawable/ic_action_copy"
+        android:title="@string/menu_copyLink"
+        webeyn:showAsAction="always">
+    </item>
     <item
         android:id="@+id/item_rate"
         android:icon="@drawable/ic_action_favorite"
